Replace Jetty with Undertow.

--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,23 @@
 
         <dependencies.cometd.version>3.0.2-SNAPSHOT</dependencies.cometd.version>
         <dependencies.javax.servlet.version>3.1.0</dependencies.javax.servlet.version>
-        <dependencies.jetty.version>9.2.2.v20140723</dependencies.jetty.version>
         <dependencies.scala.version>2.11.2</dependencies.scala.version>
         <dependencies.scala-xml.version>1.0.2</dependencies.scala-xml.version>
         <dependencies.scalatest.version>2.2.2</dependencies.scalatest.version>
         <dependencies.slf4j.version>1.7.7</dependencies.slf4j.version>
         <dependencies.typesafe.config.version>1.2.1</dependencies.typesafe.config.version>
+        <dependencies.undertow.version>1.0.1.Final</dependencies.undertow.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
+            <version>${dependencies.scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-reflect</artifactId>
             <version>${dependencies.scala.version}</version>
         </dependency>
         <dependency>
@@ -38,10 +43,27 @@
             <version>${dependencies.typesafe.config.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${dependencies.slf4j.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${dependencies.javax.servlet.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>${dependencies.undertow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-servlet</artifactId>
+            <version>${dependencies.undertow.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>bayeux-api</artifactId>
@@ -62,21 +84,6 @@
             <groupId>org.cometd.java</groupId>
             <artifactId>cometd-java-websocket-javax-server</artifactId>
             <version>${dependencies.cometd.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${dependencies.jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${dependencies.jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${dependencies.slf4j.version}</version>
         </dependency>
 
         <dependency>
