Remove jQuery as an always-on dependency.
Move it into the hello-world asset configuration.

--- a/examples/hello-world/application.conf
+++ b/examples/hello-world/application.conf
@@ -2,4 +2,9 @@ application: {
   processes: [
     hello
   ]
+  assets: {
+    js: [
+      "//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"
+    ]
+  }
 }
