--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <scala.version>2.11</scala.version>
 
-        <dependencies.cometd.version>3.0.3-SNAPSHOT</dependencies.cometd.version>
+        <dependencies.cometd.version>3.0.3</dependencies.cometd.version>
         <dependencies.ficus.version>1.1.1</dependencies.ficus.version>
         <dependencies.javax.servlet.version>3.1.0</dependencies.javax.servlet.version>
         <dependencies.scala.version>2.11.2</dependencies.scala.version>
