--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/faye"]
-	path = vendor/faye
-	url = git://github.com/faye/faye.git
+[submodule "vendor/faye-browser-js"]
+	path = src/vendor/com/codurance/unfluffed/static/faye-browser-js
+	url = git://github.com/SamirTalwar/faye-browser-js.git
