Tic-tac-toe games! Not <del>thread</del> <ins>browser</ins>-safe.

--- a/examples/tic-tac-toe/application.conf
+++ b/examples/tic-tac-toe/application.conf
@@ -1,11 +1,11 @@
 application: {
   title: "Tic-Tac-Toe"
   processes: [
-    stage
-    hero
-    villain
+    producer
     director
+    star
     choreographer
+    stage
   ]
   assets: {
     js: [
