--- a/examples/tic-tac-toe/application.conf
+++ b/examples/tic-tac-toe/application.conf
@@ -8,6 +8,9 @@ application: {
     stage
   ]
   assets: {
+    css: [
+      "tic-tac-toe.css"
+    ]
     js: [
       "//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"
     ]
